--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,9 @@
 language: python
-matrix:
-  include:
-    - python: 3.5
-    - python: 3.6
-    - python: 3.7
-    - python: 3.8-dev
-    dist: xenial
-    sudo: true
+python:
+  - "3.5"
+  - "3.6"
+  - "3.7"
+  - "3.8-dev"
 
 install:
   - pip install pipenv
